[project]
name = "assessment_agent"
version = "0.1.0"
description = "assessment-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
]

[project.scripts]
assessment_agent = "assessment_agent.main:run"
run_crew = "assessment_agent.main:run"
train = "assessment_agent.main:train"
replay = "assessment_agent.main:replay"
test = "assessment_agent.main:test"
run_with_trigger = "assessment_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
